--- a/语言翻译小面板.html
+++ b/语言翻译小面板.html
@@ -105,159 +105,356 @@
         </div>
       </div>
 
-      <!-- 翻译文本 (动态面板) -->
-      <div id="u12" class="ax_default" data-label="翻译文本">
-        <div id="u12_state0" class="panel_state" data-label="State1">
-          <div id="u12_state0_content" class="panel_state_content">
+      <!-- Unnamed (图片) -->
+      <div id="u12" class="ax_default image">
+        <img id="u12_img" class="img " src="images/语言翻译小面板/u12.png"/>
+        <!-- Unnamed () -->
+        <div id="u13" class="text" style="display: none; visibility: hidden">
+          <p><span></span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (图片) -->
+      <div id="u14" class="ax_default image">
+        <img id="u14_img" class="img " src="images/语言翻译小面板/u14.png"/>
+        <!-- Unnamed () -->
+        <div id="u15" class="text" style="display: none; visibility: hidden">
+          <p><span></span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (图片) -->
+      <div id="u16" class="ax_default image">
+        <img id="u16_img" class="img " src="images/语言翻译小面板/u14.png"/>
+        <!-- Unnamed () -->
+        <div id="u17" class="text" style="display: none; visibility: hidden">
+          <p><span></span></p>
+        </div>
+      </div>
+
+      <!-- 这个页面 (动态面板) -->
+      <div id="u18" class="ax_default" data-label="这个页面">
+        <div id="u18_state0" class="panel_state" data-label="State1">
+          <div id="u18_state0_content" class="panel_state_content">
 
             <!-- Unnamed (矩形) -->
-            <div id="u13" class="ax_default box_1">
-              <img id="u13_img" class="img " src="images/语言翻译小面板/u13.png"/>
+            <div id="u19" class="ax_default box_1">
+              <div id="u19_div" class=""></div>
               <!-- Unnamed () -->
-              <div id="u14" class="text" style="display: none; visibility: hidden">
+              <div id="u20" class="text" style="display: none; visibility: hidden">
                 <p><span></span></p>
               </div>
             </div>
 
-            <!-- Unnamed (内联框架) -->
-            <div id="u15" class="ax_default">
-              <iframe id="u15_input" scrolling="auto" frameborder="1" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+            <!-- Unnamed (矩形) -->
+            <div id="u21" class="ax_default _二级标题">
+              <div id="u21_div" class=""></div>
+              <!-- Unnamed () -->
+              <div id="u22" class="text" style="visibility: visible;">
+                <p><span>1、</span></p>
+              </div>
+            </div>
+
+            <!-- Unnamed (矩形) -->
+            <div id="u23" class="ax_default _二级标题">
+              <div id="u23_div" class=""></div>
+              <!-- Unnamed () -->
+              <div id="u24" class="text" style="visibility: visible;">
+                <p><span>2、</span></p>
+              </div>
+            </div>
+
+            <!-- Unnamed (矩形) -->
+            <div id="u25" class="ax_default _二级标题">
+              <div id="u25_div" class=""></div>
+              <!-- Unnamed () -->
+              <div id="u26" class="text" style="visibility: visible;">
+                <p><span>3、</span></p>
+              </div>
+            </div>
+
+            <!-- Unnamed (矩形) -->
+            <div id="u27" class="ax_default _文本段落">
+              <div id="u27_div" class=""></div>
+              <!-- Unnamed () -->
+              <div id="u28" class="text" style="visibility: visible;">
+                <p><span>啦啦啦啦啦啦啦啦啦啦啦啦啦啦啦啦啦啦啦啦</span></p>
+              </div>
+            </div>
+
+            <!-- 家庭信息加时间 (矩形) -->
+            <div id="u29" class="ax_default _一级标题" data-label="家庭信息加时间">
+              <div id="u29_div" class=""></div>
+              <!-- Unnamed () -->
+              <div id="u30" class="text" style="visibility: visible;">
+                <p><span>家庭信息&nbsp; &nbsp; &nbsp; 2017.7.18&nbsp; 18：30</span></p>
+              </div>
+            </div>
+
+            <!-- Unnamed (矩形) -->
+            <div id="u31" class="ax_default _二级标题">
+              <div id="u31_div" class=""></div>
+              <!-- Unnamed () -->
+              <div id="u32" class="text" style="visibility: visible;">
+                <p><span>4、</span></p>
+              </div>
+            </div>
+
+            <!-- Unnamed (矩形) -->
+            <div id="u33" class="ax_default _二级标题">
+              <div id="u33_div" class=""></div>
+              <!-- Unnamed () -->
+              <div id="u34" class="text" style="visibility: visible;">
+                <p><span>5、</span></p>
+              </div>
+            </div>
+
+            <!-- Unnamed (矩形) -->
+            <div id="u35" class="ax_default _二级标题">
+              <div id="u35_div" class=""></div>
+              <!-- Unnamed () -->
+              <div id="u36" class="text" style="visibility: visible;">
+                <p><span>6、</span></p>
+              </div>
+            </div>
+
+            <!-- 信用信息加时间 (矩形) -->
+            <div id="u37" class="ax_default _一级标题" data-label="信用信息加时间">
+              <div id="u37_div" class=""></div>
+              <!-- Unnamed () -->
+              <div id="u38" class="text" style="visibility: visible;">
+                <p><span>信用信息&nbsp; &nbsp; &nbsp; 2017.7.18&nbsp; 18：40</span></p>
+              </div>
             </div>
 
             <!-- Unnamed (图片) -->
-            <div id="u16" class="ax_default image">
-              <img id="u16_img" class="img " src="images/语言翻译小面板/u16.png"/>
+            <div id="u39" class="ax_default image">
+              <img id="u39_img" class="img " src="images/语言翻译小面板/u39.png"/>
               <!-- Unnamed () -->
-              <div id="u17" class="text" style="display: none; visibility: hidden">
+              <div id="u40" class="text" style="display: none; visibility: hidden">
                 <p><span></span></p>
               </div>
             </div>
 
             <!-- Unnamed (图片) -->
-            <div id="u18" class="ax_default image">
-              <img id="u18_img" class="img " src="images/语言翻译小面板/u16.png"/>
+            <div id="u41" class="ax_default image">
+              <img id="u41_img" class="img " src="images/语言翻译小面板/u41.png"/>
               <!-- Unnamed () -->
-              <div id="u19" class="text" style="display: none; visibility: hidden">
+              <div id="u42" class="text" style="display: none; visibility: hidden">
                 <p><span></span></p>
               </div>
             </div>
 
             <!-- Unnamed (图片) -->
-            <div id="u20" class="ax_default image">
-              <img id="u20_img" class="img " src="images/语言翻译小面板/u20.png"/>
+            <div id="u43" class="ax_default image">
+              <img id="u43_img" class="img " src="images/语言翻译小面板/u43.png"/>
               <!-- Unnamed () -->
-              <div id="u21" class="text" style="display: none; visibility: hidden">
+              <div id="u44" class="text" style="display: none; visibility: hidden">
                 <p><span></span></p>
+              </div>
+            </div>
+
+            <!-- Unnamed (图片) -->
+            <div id="u45" class="ax_default image">
+              <img id="u45_img" class="img " src="images/语言翻译小面板/u39.png"/>
+              <!-- Unnamed () -->
+              <div id="u46" class="text" style="display: none; visibility: hidden">
+                <p><span></span></p>
+              </div>
+            </div>
+
+            <!-- Unnamed (图片) -->
+            <div id="u47" class="ax_default image">
+              <img id="u47_img" class="img " src="images/语言翻译小面板/u41.png"/>
+              <!-- Unnamed () -->
+              <div id="u48" class="text" style="display: none; visibility: hidden">
+                <p><span></span></p>
+              </div>
+            </div>
+
+            <!-- Unnamed (矩形) -->
+            <div id="u49" class="ax_default _文本段落">
+              <div id="u49_div" class=""></div>
+              <!-- Unnamed () -->
+              <div id="u50" class="text" style="visibility: visible;">
+                <p><span>啦啦啦啦啦啦啦啦啦啦啦啦啦啦啦啦啦啦啦啦</span></p>
+              </div>
+            </div>
+
+            <!-- Unnamed (图片) -->
+            <div id="u51" class="ax_default image">
+              <img id="u51_img" class="img " src="images/语言翻译小面板/u39.png"/>
+              <!-- Unnamed () -->
+              <div id="u52" class="text" style="display: none; visibility: hidden">
+                <p><span></span></p>
+              </div>
+            </div>
+
+            <!-- Unnamed (图片) -->
+            <div id="u53" class="ax_default image">
+              <img id="u53_img" class="img " src="images/语言翻译小面板/u41.png"/>
+              <!-- Unnamed () -->
+              <div id="u54" class="text" style="display: none; visibility: hidden">
+                <p><span></span></p>
+              </div>
+            </div>
+
+            <!-- Unnamed (图片) -->
+            <div id="u55" class="ax_default image">
+              <img id="u55_img" class="img " src="images/语言翻译小面板/u43.png"/>
+              <!-- Unnamed () -->
+              <div id="u56" class="text" style="display: none; visibility: hidden">
+                <p><span></span></p>
+              </div>
+            </div>
+
+            <!-- Unnamed (图片) -->
+            <div id="u57" class="ax_default image">
+              <img id="u57_img" class="img " src="images/语言翻译小面板/u39.png"/>
+              <!-- Unnamed () -->
+              <div id="u58" class="text" style="display: none; visibility: hidden">
+                <p><span></span></p>
+              </div>
+            </div>
+
+            <!-- Unnamed (图片) -->
+            <div id="u59" class="ax_default image">
+              <img id="u59_img" class="img " src="images/语言翻译小面板/u41.png"/>
+              <!-- Unnamed () -->
+              <div id="u60" class="text" style="display: none; visibility: hidden">
+                <p><span></span></p>
+              </div>
+            </div>
+
+            <!-- Unnamed (矩形) -->
+            <div id="u61" class="ax_default _文本段落">
+              <div id="u61_div" class=""></div>
+              <!-- Unnamed () -->
+              <div id="u62" class="text" style="visibility: visible;">
+                <p><span>译：</span></p>
+              </div>
+            </div>
+
+            <!-- Unnamed (矩形) -->
+            <div id="u63" class="ax_default _文本段落">
+              <div id="u63_div" class=""></div>
+              <!-- Unnamed () -->
+              <div id="u64" class="text" style="visibility: visible;">
+                <p><span>啦啦啦啦啦啦啦啦啦啦啦啦啦啦啦啦啦啦啦啦</span></p>
+              </div>
+            </div>
+
+            <!-- Unnamed (矩形) -->
+            <div id="u65" class="ax_default _文本段落">
+              <div id="u65_div" class=""></div>
+              <!-- Unnamed () -->
+              <div id="u66" class="text" style="visibility: visible;">
+                <p><span>啦啦啦啦啦啦啦啦啦啦啦啦啦啦啦啦啦啦啦啦</span></p>
+              </div>
+            </div>
+
+            <!-- Unnamed (矩形) -->
+            <div id="u67" class="ax_default _文本段落">
+              <div id="u67_div" class=""></div>
+              <!-- Unnamed () -->
+              <div id="u68" class="text" style="visibility: visible;">
+                <p><span>译：</span></p>
+              </div>
+            </div>
+
+            <!-- Unnamed (动态面板) -->
+            <div id="u69" class="ax_default">
+              <div id="u69_state0" class="panel_state" data-label="State1">
+                <div id="u69_state0_content" class="panel_state_content">
+
+                  <!-- 2 (图片) -->
+                  <div id="u70" class="ax_default image" data-label="2">
+                    <img id="u70_img" class="img " src="images/语言翻译小面板/2_u70.png"/>
+                    <!-- Unnamed () -->
+                    <div id="u71" class="text" style="display: none; visibility: hidden">
+                      <p><span></span></p>
+                    </div>
+                  </div>
+
+                  <!-- 1 (图片) -->
+                  <div id="u72" class="ax_default image" data-label="1">
+                    <img id="u72_img" class="img " src="images/语言翻译小面板/1_u72.png"/>
+                    <!-- Unnamed () -->
+                    <div id="u73" class="text" style="display: none; visibility: hidden">
+                      <p><span></span></p>
+                    </div>
+                  </div>
+
+                  <!-- 3 (图片) -->
+                  <div id="u74" class="ax_default image" data-label="3">
+                    <img id="u74_img" class="img " src="images/语言翻译小面板/3_u74.png"/>
+                    <!-- Unnamed () -->
+                    <div id="u75" class="text" style="display: none; visibility: hidden">
+                      <p><span></span></p>
+                    </div>
+                  </div>
+
+                  <!-- 4 (图片) -->
+                  <div id="u76" class="ax_default image" data-label="4">
+                    <img id="u76_img" class="img " src="images/语言翻译小面板/4_u76.png"/>
+                    <!-- Unnamed () -->
+                    <div id="u77" class="text" style="display: none; visibility: hidden">
+                      <p><span></span></p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <!-- 家庭信息 (气泡) -->
+            <div id="u78" class="ax_default box_1 ax_default_hidden" data-label="家庭信息" style="display: none; visibility: hidden">
+              <img id="u78_img" class="img " src="images/语言翻译小面板/家庭信息_u78.png"/>
+              <!-- Unnamed () -->
+              <div id="u79" class="text" style="visibility: visible;">
+                <p><span>家庭信息</span></p>
+              </div>
+            </div>
+
+            <!-- 信用信息 (气泡) -->
+            <div id="u80" class="ax_default box_1 ax_default_hidden" data-label="信用信息" style="display: none; visibility: hidden">
+              <img id="u80_img" class="img " src="images/语言翻译小面板/家庭信息_u78.png"/>
+              <!-- Unnamed () -->
+              <div id="u81" class="text" style="visibility: visible;">
+                <p><span>信用信息</span></p>
+              </div>
+            </div>
+
+            <!-- Unnamed (文本框) -->
+            <div id="u82" class="ax_default text_field">
+              <input id="u82_input" type="text" value=""/>
+            </div>
+
+            <!-- Unnamed (矩形) -->
+            <div id="u83" class="ax_default box_1">
+              <div id="u83_div" class=""></div>
+              <!-- Unnamed () -->
+              <div id="u84" class="text" style="visibility: visible;">
+                <p><span>搜索</span></p>
               </div>
             </div>
           </div>
         </div>
       </div>
 
-      <!-- 翻译文本1 (动态面板) -->
-      <div id="u22" class="ax_default ax_default_hidden" data-label="翻译文本1" style="display: none; visibility: hidden">
-        <div id="u22_state0" class="panel_state" data-label="State1">
-          <div id="u22_state0_content" class="panel_state_content">
-
-            <!-- Unnamed (矩形) -->
-            <div id="u23" class="ax_default box_1">
-              <img id="u23_img" class="img " src="images/语言翻译小面板/u13.png"/>
-              <!-- Unnamed () -->
-              <div id="u24" class="text" style="display: none; visibility: hidden">
-                <p><span></span></p>
-              </div>
-            </div>
-
-            <!-- Unnamed (内联框架) -->
-            <div id="u25" class="ax_default">
-              <iframe id="u25_input" scrolling="auto" frameborder="1" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-            </div>
+      <!-- Unnamed (动态面板) -->
+      <div id="u85" class="ax_default">
+        <div id="u85_state0" class="panel_state" data-label="State1">
+          <div id="u85_state0_content" class="panel_state_content">
 
             <!-- Unnamed (图片) -->
-            <div id="u26" class="ax_default image">
-              <img id="u26_img" class="img " src="images/语言翻译小面板/u16.png"/>
+            <div id="u86" class="ax_default image">
+              <img id="u86_img" class="img " src="images/语言翻译小面板/u86.png"/>
               <!-- Unnamed () -->
-              <div id="u27" class="text" style="display: none; visibility: hidden">
-                <p><span></span></p>
-              </div>
-            </div>
-
-            <!-- Unnamed (图片) -->
-            <div id="u28" class="ax_default image">
-              <img id="u28_img" class="img " src="images/语言翻译小面板/u16.png"/>
-              <!-- Unnamed () -->
-              <div id="u29" class="text" style="display: none; visibility: hidden">
-                <p><span></span></p>
-              </div>
-            </div>
-
-            <!-- Unnamed (图片) -->
-            <div id="u30" class="ax_default image">
-              <img id="u30_img" class="img " src="images/语言翻译小面板/u20.png"/>
-              <!-- Unnamed () -->
-              <div id="u31" class="text" style="display: none; visibility: hidden">
+              <div id="u87" class="text" style="display: none; visibility: hidden">
                 <p><span></span></p>
               </div>
             </div>
           </div>
-        </div>
-      </div>
-
-      <!-- Unnamed (热区) -->
-      <div id="u32" class="ax_default">
-      </div>
-
-      <!-- Unnamed (矩形) -->
-      <div id="u33" class="ax_default box_1">
-        <div id="u33_div" class=""></div>
-        <!-- Unnamed () -->
-        <div id="u34" class="text" style="visibility: visible;">
-          <p><span>转文字</span></p>
-        </div>
-      </div>
-
-      <!-- Unnamed (矩形) -->
-      <div id="u35" class="ax_default label">
-        <div id="u35_div" class=""></div>
-        <!-- Unnamed () -->
-        <div id="u36" class="text" style="visibility: visible;">
-          <p><span>10,000“</span></p>
-        </div>
-      </div>
-
-      <!-- Unnamed (矩形) -->
-      <div id="u37" class="ax_default label">
-        <div id="u37_div" class=""></div>
-        <!-- Unnamed () -->
-        <div id="u38" class="text" style="visibility: visible;">
-          <p><span>（语言总时长10,000秒）</span></p>
-        </div>
-      </div>
-
-      <!-- Unnamed (图片) -->
-      <div id="u39" class="ax_default image">
-        <img id="u39_img" class="img " src="images/语言翻译小面板/u39.png"/>
-        <!-- Unnamed () -->
-        <div id="u40" class="text" style="display: none; visibility: hidden">
-          <p><span></span></p>
-        </div>
-      </div>
-
-      <!-- Unnamed (图片) -->
-      <div id="u41" class="ax_default image">
-        <img id="u41_img" class="img " src="images/语言翻译小面板/u41.png"/>
-        <!-- Unnamed () -->
-        <div id="u42" class="text" style="display: none; visibility: hidden">
-          <p><span></span></p>
-        </div>
-      </div>
-
-      <!-- Unnamed (图片) -->
-      <div id="u43" class="ax_default image">
-        <img id="u43_img" class="img " src="images/语言翻译小面板/u41.png"/>
-        <!-- Unnamed () -->
-        <div id="u44" class="text" style="display: none; visibility: hidden">
-          <p><span></span></p>
         </div>
       </div>
     </div>
